# sdl_playground

./: CMakeLists.txt  Makefile  README.md  main.cpp
CMakeModules/: FindSDL2.cmake
data/: debug.sh  run.sh  valgrind.sh
